Comments and refactoring

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Hyperbolic Structures</title>
 </head>
 <body>
+    <select id="sketchSelect">
+        <option value="hilbert">Hilbert Bisectors</option>
+        <option value="voronoi">Hyperbolic Voronoi</option>
+        <option value="geodesics">Hyperbolic Geodesics</option>
+    </select>
     <div id="app"></div>
     <script type="module" src="./src/index.ts"></script>
 </body>
